# DB_employees

./: README.md  create_db.sql  database.ini  pyproject.toml
src/: config.py  db_manager.py  main.py
